# Smart-Git-Auto-Commit-Push

./: .gitignore  README.md  config.json  pyproject.toml
src/: git_manager.py
