# how to build the package
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

# metadata
[project]
name = "smart-git"
version = "0.1.0"
authors = [
    {name = "M. Sanjay Uddith Raju", email = "machiraju@gmail.com"}
]
description = "A Python package for automating Git repositories"
readme = "README.md"
requires-python = ">=3.6"
dependencies = []

[project.urls]
Homepage = "https://github.com/uddithmachiraju/Smart-Git-Auto-Commit-Push"

# This tells setuptools where your source code is located.
[tool.setuptools]
package-dir = { "" = "src" }

# This tells setuptools to automatically find all packages inside the src/ directory.
[tool.setuptools.packages.find]
where = ["src"] 